--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Audiowide|Orbitron|Syncopate&display=swap"
       rel="stylesheet"
     />
-    <title>React Step Sequencer</title>
+    <title>Mini-Pop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
